# llm-benchmark

./: .gitignore  pyproject.toml
coding/: tasks.yaml
coding/docker/: build_images.sh  javascript.Dockerfile  python.Dockerfile  rust.Dockerfile
coding/tasks/anagram-rust/: test_solution.rs
coding/tasks/bracket-validator-javascript/: solution.test.js
coding/tasks/csv-json-javascript/: solution.test.js
coding/tasks/csv-summariser-python/: test_solution.py
coding/tasks/dedupe-javascript/: solution.test.js
coding/tasks/fibonacci-rust/: test_solution.rs
coding/tasks/fizzbuzz-rust/: test_solution.rs
coding/tasks/palindrome-python/: test_solution.py
coding/tasks/roman-numeral-python/: test_solution.py
coding/tasks/word-counter-python/: test_solution.py
config/: benchmark.yaml
corpus/: httpx.yaml
results/frontier-review/: manual-checks.jsonl  metrics.jsonl  reviews.jsonl  verdicts.jsonl
results/reports/: frontier-validity.md  gguf-dense.md  summary.md  tool-scenario-approval.md
src/llm_benchmark/: __init__.py  baseline.py  cli.py  client.py  code_review.py  coding.py  config.py  evidence.py  performance.py  preflight.py  reporting.py  runners.py  smoketest.py  structured.py  vision.py  vision_generators.py
structured/: scenarios.yaml
tests/: test_baseline.py  test_code_review.py  test_coding.py  test_config.py  test_performance.py  test_preflight.py  test_reporting.py  test_runner_evidence.py  test_smoketest.py  test_structured.py  test_vision.py  test_vision_generators.py
vlm-testset/manifests/: charts.yaml  photos.yaml
(+53 files in other folders)
